# dicomtag

./: .gitignore  README.md  build_executables.py  pyproject.toml
.github/workflows/: ci.yml  release_build.yml  releases.yml  test.yml
dicomtag/: __init__.py  __version__.py  main.py
dicomtag/gui/: main_window.py  tree_item.py  tree_model.py
dicomtag/model/: dicom_model.py
tests/: test_dicom_model.py
