[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomtag"
# version = "0.0.0"  # Version is managed by setuptools_scm
description = "A Python tool for viewing and editing DICOM tags."
authors = [
    { name = "Niels Bassler", email = "nbassler@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["pydicom>=2.4.0", "PyQt6>=6.0"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.1",
    "pep8-naming>=0.12.1",
    "mypy>=0.971",
    "black>=22.3.0",
    "yapf>=0.32.0",
]

[project.scripts]
dicomtag = "dicomtag.main:main" # Replace with the actual path to your entry functi

[tool.pyinstaller]
entry_script = "dicomtag/main.py"
output_dir = "dist"
options = ["--onefile"]

[tool.setuptools]
packages = ["dicomtag"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
max-line-length = 127

[tool.yapf]
based_on_style = "pep8"
column_limit = 127

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
