[build-system]
requires = ["setuptools>=82.0.1", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomtag"
# version = "0.0.0"  # Version is managed by setuptools_scm
description = "A simple DICOM tag editor based on PyQt6."
authors = [
    { name = "Niels Bassler", email = "nbassler@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["pydicom>=2.4.0", "PyQt6>=6.0"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=0.971",
    "pytest>=7.0",
]

[project.scripts]
dicomtag = "dicomtag.main:main" # Replace with the actual path to your entry functi

[tool.pyinstaller]
entry_script = "dicomtag/main.py"
output_dir = "dist"
options = ["--onefile"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "N"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
